--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.j256.ormlite:ormlite-android:4.48'
     compile 'com.facebook.android:facebook-android-sdk:4.7.0'
+    compile files('libs/android-async-http-1.4.5.jar')
+    compile files('libs/butterknife-6.1.0.jar')
 }
