--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,10 +18,58 @@
     <uses-permission android:name="android.permission.CAMERA" />
 
 
+    <!-- 访问账户Gmail列表权限 -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <!-- 使用证书权限 -->
+    <uses-permission android:name="android.permission.USE_CREDENTIALS" />
+    <!-- 管理账户权限 -->
+    <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
+    <!-- 验证账户权限 -->
+    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
+    <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
+    <!-- 连续广播权限 -->
+    <uses-permission android:name="android.permission.BROADCAST_STICKY" />
+    <!-- 读写系统设置权限 -->
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+    <!-- 这个权限用于进行网络定位 -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <!-- 这个权限用于访问GPS定位 -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <!-- 用于访问wifi网络信息，wifi信息会用于进行网络定位 -->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <!-- 获取运营商信息，用于支持提供运营商信息相关的接口 -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!-- 这个权限用于获取wifi的获取权限，wifi信息会用来进行网络定位 -->
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <!-- 写入扩展存储，向扩展卡写入数据，用于写入离线定位数据 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!-- 访问网络，网络定位需要上网 -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <!-- 允许应用读取低级别的系统日志文件 -->
+    <uses-permission android:name="android.permission.READ_LOGS" />
+    <!-- 在SDCard中创建与删除文件权限 -->
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <!-- 读写手机状态和身份 -->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <!-- 向外拨打电话的权限 -->
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <!-- 调用照相机相关权限 -->
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <!-- 发送短信权限 -->
+    <uses-permission android:name="android.permission.SEND_SMS" />
+    <!-- 读送短信权限 -->
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <!-- 写短信权限 -->
+    <uses-permission android:name="android.permission.WRITE_SMS" />
+    <!-- 接收短信权限 -->
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+
+
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -69,20 +117,20 @@
 
         </activity>
 
-        <!--登录效果-->
-        <activity android:name=".activity.ui_common.login.LoginActivity"
-            android:label="@string/LoginActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="com.summerhao.android.UI_COMMON" />
-            </intent-filter>
-        </activity>
-        <!--注册-->
-        <activity android:name=".activity.ui_common.login.RegisterActivity">
-        </activity>
-        <!--忘记密码-->
-        <activity android:name=".activity.ui_common.login.ForgotPassActivity">
-        </activity>
+        <!--&lt;!&ndash;登录效果&ndash;&gt;-->
+        <!--<activity android:name=".activity.ui_common.login.LoginActivity"-->
+            <!--android:label="@string/LoginActivity">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+                <!--<category android:name="com.summerhao.android.UI_COMMON" />-->
+            <!--</intent-filter>-->
+        <!--</activity>-->
+        <!--&lt;!&ndash;注册&ndash;&gt;-->
+        <!--<activity android:name=".activity.ui_common.login.RegisterActivity">-->
+        <!--</activity>-->
+        <!--&lt;!&ndash;忘记密码&ndash;&gt;-->
+        <!--<activity android:name=".activity.ui_common.login.ForgotPassActivity">-->
+        <!--</activity>-->
 
 
         <!--************************自定义控件封装*****************************-->
@@ -113,6 +161,13 @@
 
         <activity android:name=".activity.function_common.zxing.CaptureActivity"
             android:label="@string/CaptureActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="com.summerhao.android.FUNCTION_COMMON" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".activity.function_common.Picture.UsePictureActivity"
+            android:label="@string/UsePictureActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="com.summerhao.android.FUNCTION_COMMON" />
