--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.7.0'
     compile files('libs/android-async-http-1.4.5.jar')
     compile files('libs/butterknife-6.1.0.jar')
+    compile files('libs/androideventbus-1.0.5.jar')
 }
