--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -173,15 +173,22 @@
                 <category android:name="com.summerhao.android.VIEW_COMMON" />
             </intent-filter>
         </activity>
-        <activity android:name=".all_list.view_common.customview.porter_duff.CustomViewActivity"
+        <activity android:name=".all_list.view_common.customview.color_filter.CustomViewActivity"
             android:label="@string/CustomViewActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="com.summerhao.android.VIEW_COMMON" />
             </intent-filter>
         </activity>
-        <activity android:name=".all_list.view_common.customview.path_mode.PathViewActivity"
-            android:label="自定义View/path相关">
+        <activity android:name=".all_list.view_common.customview.paint_other.PathViewActivity"
+            android:label="@string/PathViewActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="com.summerhao.android.VIEW_COMMON" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".all_list.view_common.customview.shader_matrix.ShaderMatrixViewActivity"
+            android:label="@string/ShaderMatrixViewActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="com.summerhao.android.VIEW_COMMON" />
